# Simple-Cpp

./: README.md
Chapter1/: CMakeLists.txt
Chapter1/Include/: parser.h
Chapter1/Include/node/: constant_node.h  node.h  return_node.h  start_node.h
Chapter1/src/: parser.cc
Chapter1/src/node/: constant_node.cc  node.cc  return_node.cc  start_node.cc
Chapter1/tests/: CMakeLists.txt  Chapter01Test.cc
Chapter10/: CMakeLists.txt
Chapter10/Include/: parser.h  tomi.h  utils.h
Chapter10/Include/node/: constant_node.h  if_node.h  load_node.h  mem_op_node.h  multi_node.h  new_node.h  node.h  phi_node.h  proj_node.h  region_node.h  return_node.h  scope_node.h  start_node.h  stop_node.h  store_node.h  sub_node.h
Chapter10/Include/type/: field.h  integer_type.h  tuple_type.h  type.h  type_mem.h  type_mem_ptr.h  type_struct.h
Chapter10/src/: iterPeeps.cc  main.cc  parser.cc  utils.cc
Chapter10/src/node/: add_node.cc  bool_node.cc  constant_node.cc  load_node.cc  loop_node.cc  mem_op_node.cc  new_node.cc  node.cc  not_node.cc  phi_node.cc  proj_node.cc  region_node.cc  return_node.cc  scope_node.cc  start_node.cc  stop_node.cc  store_node.cc  sub_node.cc
Chapter10/src/type/: field.cc  integer_type.cc  tuple_type.cc  type.cc  type_mem.cc  type_mem_ptr.cc  type_struct.cc
Chapter10/tests/: CMakeLists.txt  Chapter10Test.cc
Chapter11/: CMakeLists.txt
Chapter11/Include/: IR_printer.h  globalCodeMotion.h  parser.h  tomi.h  utils.h
Chapter11/src/: IR_Printer.cc  globalCodeMotion.cc  graphEvaluator.cc  iterPeeps.cc  parser.cc  utils.cc
Chapter11/tests/: CMakeLists.txt  Chapter11Test.cc
Chapter12/: CMakeLists.txt
Chapter12/Include/: parser.h  tomi.h
Chapter12/src/: IR_Printer.cc  globalCodeMotion.cc  main.cc  parser.cc
Chapter12/tests/: CMakeLists.txt  Chapter12Test.cc
Chapter13/Include/: globalCodeMotion.h  parser.h  tomi.h  utils.h
Chapter13/src/: globalCodeMotion.cc  iterPeeps.cc  parser.cc
Chapter13/tests/: CMakeLists.txt  Chapter13Test.cc
Chapter14/: CMakeLists.txt
Chapter17/: CMakeLists.txt
Chapter18/: CMakeLists.txt
Chapter18/Include/: IR_printer.h  codegen.h  globalCodeMotion.h  list_scheduler.h  parser.h  tomi.h  utils.h  var.h
Chapter18/Include/node/: addf_node.h  and_node.h  bool_node.h  call_end_node.h  call_node.h  cast_node.h  cfg_node.h  constant_node.h  cproj_node.h  ctrl_node.h  fref_node.h  fun_node.h  load_node.h  logical_node.h  mem_merge_node.h  mem_op_node.h  node.h  or_node.h  parm_node.h  phi_node.h  proj_node.h  region_node.h  return_node.h  sar_node.h  scope_minnode.h  scope_node.h  shl_node.h  shr_node.h  start_node.h  store_node.h  xctrl_node.h  xor_node.h
Chapter18/Include/type/: field.h  integer_type.h  tuple_type.h  type.h  type_float.h  type_fun_ptr.h  type_mem.h  type_mem_ptr.h  type_nil.h  type_ptr.h  type_rpc.h  type_struct.h
Chapter18/src/: IR_Printer.cc  codegen.cc  globalCodeMotion.cc  list_scheduler.cc  parser.cc  utils.cc  var.cc
Chapter18/src/node/: add_node.cc  and_node.cc  bool_node.cc  call_end_node.cc  call_node.cc  cast_node.cc  cfg_node.cc  constant_node.cc  cproj_node.cc  ctrl_node.cc  fref_node.cc  fun_node.cc  load_node.cc  logical_node.cc  loop_node.cc  mem_merge_node.cc  mem_op_node.cc  mul_node.cc  new_node.cc  node.cc  not_node.cc  or_node.cc  parm_node.cc  phi_node.cc  read_only_node.cc  region_node.cc  return_node.cc  sar_node.cc  scope_minnode.cc  scope_node.cc  shl_node.cc  shr_node.cc  start_node.cc  stop_node.cc  store_node.cc  sub_node.cc  to_float_node.cc  xctrl_node.cc  xor_node.cc
Chapter18/src/type/: field.cc  integer_type.cc  tuple_type.cc  type.cc  type_float.cc  type_fun_ptr.cc  type_mem.cc  type_mem_ptr.cc  type_nil.cc  type_ptr.cc  type_rpc.cc  type_struct.cc
Chapter18/tests/: CMakeLists.txt  Chapter17Test.cc
Chapter2/: CMakeLists.txt
Chapter3/: CMakeLists.txt
Chapter3/Include/: graph_visualizer.h  parser.h
Chapter3/Include/node/: add_node.h  node.h  scope_node.h
Chapter3/Include/type/: integer_type.h  type.h
Chapter3/src/: graphVisualizer.cc  parser.cc
Chapter3/src/node/: divnode.cc  node.cc  return_node.cc  scope_node.cc
Chapter3/src/type/: integer_type.cc  type.cc
Chapter3/tests/: CMakeLists.txt  Chapter03Test.cc
Chapter4/: CMakeLists.txt  grammar.md
Chapter5/: CMakeLists.txt
Chapter6/tests/: CMakeLists.txt  Chapter06Test.cc
Chapter8/: CMakeLists.txt
Chapter8/Include/: graph_evaluator.h  graph_visualizer.h  parser.h  tomi.h
Chapter8/Include/node/: add_node.h  bool_node.h  constant_node.h  loop_node.h  minus_node.h  mul_node.h  multi_node.h  node.h  not_node.h  phi_node.h  proj_node.h  region_node.h  scope_node.h  start_node.h  stop_node.h  sub_node.h
Chapter8/Include/type/: type.h
Chapter8/src/: graphEvaluator.cc  graphVisualizer.cc  main.cc  parser.cc
Chapter8/src/node/: add_node.cc  bool_node.cc  divnode.cc  if_node.cc  loop_node.cc  mul_node.cc  node.cc  phi_node.cc  proj_node.cc  region_node.cc  return_node.cc  scope_node.cc  start_node.cc  stop_node.cc  sub_node.cc
Chapter8/src/type/: integer_type.cc
Chapter8/tests/: CMakeLists.txt  Chapter08Test.cc
Chapter9/: CMakeLists.txt
Chapter9/Include/: IR_printer.h  Iter_peeps.h  graph_evaluator.h  graph_visualizer.h  parser.h  tomi.h  utils.h
Chapter9/Include/node/: add_node.h  bool_node.h  constant_node.h  divnode.h  if_node.h  minus_node.h  mul_node.h  multi_node.h  node.h  not_node.h  phi_node.h  proj_node.h  region_node.h  return_node.h  scope_node.h  start_node.h  stop_node.h  sub_node.h
Chapter9/Include/type/: integer_type.h  tuple_type.h  type.h
Chapter9/src/: IR_Printer.cc  graphEvaluator.cc  graphVisualizer.cc  iterPeeps.cc  main.cc  parser.cc  utils.cc
Chapter9/src/node/: add_node.cc  bool_node.cc  constant_node.cc  divnode.cc  if_node.cc  loop_node.cc  minus_node.cc  mul_node.cc  multi_node.cc  node.cc  not_node.cc  phi_node.cc  proj_node.cc  region_node.cc  return_node.cc  scope_node.cc  start_node.cc  stop_node.cc  sub_node.cc
Chapter9/src/type/: integer_type.cc  tuple_type.cc  type.cc
Chapter9/tests/: CMakeLists.txt  Chapter08Test.cc  Chapter09Test.cc
(+447 files in other folders)
